@@ -21,6 +21,7 @@ NEWS
   * Show "no uri specified -> 400" error only when "debug.log-request-header-on-error" is enabled (fixes #2030)
   * Fix hanging connection in mod_scgi (fixes #2024)
   * Allow digits in hostnames in more places (fixes #1148)
+  * Use connection_reset instead of handle_request_done for cleanup callbacks
 
 - 1.4.23 - 2009-06-19
   * Added some extra warning options in cmake and fix the resulting warnings (unused/static functions)
